Fixed Bug #60369	Crash with static property in trait

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@319727 c90b9560-bf6c-de11-be94-00142212c4b1